test_regress/t/t_force_readwrite_unsup.out
%Error-UNSUPPORTED: t/t_force_readwrite_unsup.v:25:18: Unsupported: Signals used via read-write reference cannot be forced
   25 |     cls.take_ref(a);
      |                  ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_force_readwrite_unsup.v:26:18: Unsupported: Signals used via read-write reference cannot be forced
   26 |     cls.take_ref(b);
      |                  ^
%Error: Exiting due to
